# Playground

./: .clangd  .gitignore  README.md
Algorithm/: UnionFind.cpp  sort.h
cpp/: booltest.cpp  temp  template.cpp  testcpp11.cpp  testcpp17.cpp  typesize.cpp
cpp/C++Primer/: CopyCtrl.cpp  Makefile  StrVec.cpp  constTest.cpp  constructTest.cpp  enumClassTest.cpp  refAttrTest.cpp  templateTest.cc  value-init.cpp
cpp/Concurrency/: Makefile  Thread  threadTest.cpp
cpp/auto_register/: PlayerBaseSystem.cpp  log
cpp/effectiveCpp/: SharePtrTest.cpp
emacs/: learn-emacs-lisp.org  learn-org-mode.org
libevent/: blockHttp.c
python/: 1.print.py  10.args.py  11.class.py  2.args.py  3.operator.py  4.range.py  5.while.py  6.forin.py  7.whileelse.py  8.forinwhile.py  9.list1.py  alterdns.py  openai.py
shellscript/: ps.org  基础知识.org  编写脚本.org
shellscript/bash/: tar_file.sh
shellscript/test/: args.sh  bc.sh  var  xunhuan.sh
spdlog_example/: CMakeLists.txt  main.cc
stc/button/: button.asm  button.c  button.ihx  button.lk  button.lst  button.map  button.rel  button.rst  button.sym
stc/button2/: button2.asm  button2.c  button2.ihx  button2.lk  button2.lst  button2.map  button2.rel  button2.rst  button2.sym
stc/button3/: button3.asm  button3.c  button3.ihx  button3.lk  button3.lst  button3.map  button3.mem  button3.rel  button3.rst  button3.sym
stc/include/: tools.h
stc/keyboard/: .clang-format  main.asm  main.c  main.ihx  main.lk  main.lst  main.map  main.mem  main.rel  main.rst  main.sym
stl_test/: CMakeLists.txt  casster_test.h  cctype_test.h  main.cc
(+195 files in other folders)
